--- a/pages/advisor/course-result.html
+++ b/pages/advisor/course-result.html
@@ -85,19 +85,18 @@
             <div id="app" class="mt-12 p-2 overflow-y-scroll relative
             xl:mt-0">
                 <!-- Additional styles in student.css -->
-                <div id="advisor-results" class="flex items-center text-sm font-semibold gap-4 text-body-200">
-                    <a href="./results.html" class="active">View Results</a>
-                    <a href="./update-result.html">Update Results</a>
-                    <a href="./upload-result.html">Upload Results</a>
-                    <a href="./cgpa-summary-result.html">CGPA Summary Result</a>
-                </div>
+                <a href="./results.html" class="flex items-center text-sm font-semibold text-body-200 hover:text-primary">
+                    <span class="material-symbols-rounded">arrow_left</span>
+                    View results
+                </a>
 
                 <div class="w-full mt-4">
                     <form action="" class="flex items-center gap-2 w-full relative md:w-[32rem]">
                         <label for="student-search" class="text-body-200 absolute top-3 left-1">
                             <span class="material-symbols-rounded">search</span>
                         </label>
-                        <input type="search" name="studentSearch" id="student-search" placeholder="Search..." class="border border-[var(--primary)] outline-none h-8  pl-8 text-body-300 w-full" >
+                        <input type="search" name="studentSearch" id="student-search" placeholder="Search..."
+                            class="border border-[var(--primary)] outline-none h-8  pl-8 text-body-300 w-full">
                         <div class="select">
                             <select name="searchBy" id="searchBy">
                                 <option value="">Search by</option>
@@ -123,8 +122,7 @@
 
                         <div class="select">
                             <label for="semester">Semester</label>
-                            <select name="semester" id="semester" disabled>
-                                <option value="">Select semester</option>
+                            <select name="semester" id="semester">
                                 <option value="harmattan">Harmattan</option>
                                 <option value="rain">Rain</option>
                             </select>
@@ -132,25 +130,198 @@
 
                         <div class="select">
                             <label for="course">Course</label>
-                            <select name="course" id="course" disabled>
-                                <option value="">Select course</option>
-                                <option value="all">All courses</option>
+                            <select name="course" id="course">
                                 <option value="1">MTH 101</option>
                             </select>
                         </div>
 
-                        <button type="submit" disabled class="btn-sm text-white bg-[var(--primary)] hover:bg-[var(--primary-700)] transition rounded h-8">
+                        <button type="submit"
+                            class="btn-sm text-white bg-[var(--primary)] hover:bg-[var(--primary-700)] transition rounded h-8">
                             View Result
                         </button>
                     </form>
+                    <div>
+                        <button type="button"
+                            class="btn-sm text-white bg-[var(--primary)] hover:bg-[var(--primary-700)] transition rounded h-8">
+                            Print
+                        </button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="fixed bg-blue-100 w-80 h-60 left-[50%] top-[50%] -translate-x-[50%] -translate-y-[10%] text-body-800 p-2">
-                <p class="text-center">For development only!!!</p>
-                Click <a href="./all-semester-courses-result.html" class="text-danger font-semibold">here</a> to see the page when the user selects "All Courses" <br>
-                Click <a href="./course-result.html" class="text-danger font-semibold">here</a> to see the page when the user selects a single course. <br>
-                Navigate to the appropriate page and display the appropriate results when the submit button is clicked.
+                <div id="advisor-results-container-single" class="pb-4">
+                    <table class="table whitespace-nowrap">
+                        <thead>
+                            <th class="w-10">S/N</th>
+                            <th>Name</th>
+                            <th class="w-10">Reg. No.</th>
+                            <th class="w-10">Program</th>
+                            <th class="w-10">Test</th>
+                            <th class="w-10">Lab</th>
+                            <th class="w-10">Exam</th>
+                            <th class="w-10">Total</th>
+                            <th class="w-10">Grade</th>
+                            <th class="w-10">Remark</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Amalagu Chikezie Simon</td>
+                                <td>20181097185</td>
+                                <td>CSC</td>
+                                <td>20</td>
+                                <td>20</td>
+                                <td>60</td>
+                                <td>100</td>
+                                <td>A</td>
+                                <td>PASS</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
 
             <div x-show="open" x-on:click.outside="open = false" x-transition id="advisor-details"
@@ -211,4 +382,5 @@
 <script type="module" src="../../main.js"></script>
 <script type="module" src="../../scripts/advisor.js"></script>
 <script type="module" src="../../scripts/advisor-results.js"></script>
+
 </html>
