--- a/pages/student/profile.html
+++ b/pages/student/profile.html
@@ -10,7 +10,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
-    <title>Student - Register Courses</title>
+    <title>Student - Profile</title>
 </head>
 
 <body x-data="{navIsOpen: false, open: false, courseOpen: false}">
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="flex items-center gap-1">
-                    <img src="../../assets/images/user.jpg" alt="user_img" class="w-7 rounded-full">
+                    <img src="../../assets/images/user.jpg" alt="user_img" class="w-7 h-7 object-cover rounded-full">
 
                     <div class="hidden lg:block">
                         <p class="text-xs font-semibold text-body-800 whitespace-nowrap text-ellipsis overflow-hidden">
@@ -92,13 +92,13 @@
                     <div
                     class="flex flex-col items-center
                     xl:col-span-1 xl:row-span-2 xl:justify-start xl:h-full">
-                        <img src="../../assets/images/user.jpg" alt="user_img" class="w-24 rounded-full xl:w-36">
-                        <form action="">
-                            <button
-                            type="submit"
-                            class="btn text-white rounded bg-[var(--accent)] hover:bg-[var(--accent-600)] transition">
-                                Change Profile Image
-                            </button>
+                        <img src="../../assets/images/user.jpg" alt="user_img" class="w-24 h-24 object-cover rounded-full xl:w-36 xl:h-36">
+                        <form action="" id="change-image-form" class="flex items-center gap-1 xl:flex-col">
+                            <div class="file-input">
+                                <input type="file" name="profileImageSelect" id="selct-profile-image" accept=".png, .jpg, .jpeg"
+                                    class="rounded w-52">
+                            </div>
+                            <input type="submit" value="Change Profile Image" class="btn text-white rounded bg-[var(--accent)] hover:bg-[var(--accent-600)] transition xl:text-sm" />
                         </form>
                     </div>
 
