--- a/pages/advisor/all-semester-courses-result.html
+++ b/pages/advisor/all-semester-courses-result.html
@@ -11,7 +11,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
-    <title>Advisor - Class</title>
+    <title>Advisor - Results</title>
 </head>
 
 <body x-data="{navIsOpen: false, open: false}">
@@ -37,13 +37,14 @@
                 <a href="./index.html"><span class="material-symbols-rounded">home</span>Home</a>
                 <a href="./class.html"><span class="material-symbols-rounded">group</span>Class</a>
                 <a href="./results.html" class="active"><span class="material-symbols-rounded">school</span>Results</a>
+                <a href="./transcript.html"><span class="material-symbols-rounded">auto_stories</span>Transcripts</a>
                 <a href="./profile.html"><span class="material-symbols-rounded">account_circle</span>Profile</a>
                 <a href="./settings.html"><span class="material-symbols-rounded">settings</span>Settings</a>
                 <a href="../../index.html"><span class="material-symbols-rounded">logout</span>Logout</a>
             </div>
         </nav>
 
-        <section class="grow">
+        <section class="grow xl:overflow-x-hidden">
             <header class="h-12 bg-white flex items-center justify-between p-2 fixed w-screen top-0 z-50
             xl:relative xl:w-full">
                 <div class="flex items-center gap-2 xl:hidden">
@@ -90,7 +91,7 @@
                     View results
                 </a>
 
-                <div class="w-full mt-4 flex gap-2">
+                <div class="w-full mt-2 flex gap-x-2 flex-wrap">
                     <form action="" class="flex items-center gap-2 w-full relative md:w-[32rem]">
                         <label for="student-search" class="text-body-200 absolute top-3 left-1">
                             <span class="material-symbols-rounded">search</span>
