--- a/pages/advisor/class.html
+++ b/pages/advisor/class.html
@@ -37,6 +37,7 @@
                 <a href="./index.html"><span class="material-symbols-rounded">home</span>Home</a>
                 <a href="./class.html" class="active"><span class="material-symbols-rounded">group</span>Class</a>
                 <a href="./results.html"><span class="material-symbols-rounded">school</span>Results</a>
+                <a href="./transcript.html"><span class="material-symbols-rounded">auto_stories</span>Transcripts</a>
                 <a href="./profile.html"><span class="material-symbols-rounded">account_circle</span>Profile</a>
                 <a href="./settings.html"><span class="material-symbols-rounded">settings</span>Settings</a>
                 <a href="../../index.html"><span class="material-symbols-rounded">logout</span>Logout</a>
