--- a/pages/advisor/course-result.html
+++ b/pages/advisor/course-result.html
@@ -11,7 +11,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
-    <title>Advisor - Class</title>
+    <title>Advisor - Results</title>
 </head>
 
 <body x-data="{navIsOpen: false, open: false}">
@@ -37,6 +37,7 @@
                 <a href="./index.html"><span class="material-symbols-rounded">home</span>Home</a>
                 <a href="./class.html"><span class="material-symbols-rounded">group</span>Class</a>
                 <a href="./results.html" class="active"><span class="material-symbols-rounded">school</span>Results</a>
+                <a href="./transcript.html"><span class="material-symbols-rounded">auto_stories</span>Transcripts</a>
                 <a href="./profile.html"><span class="material-symbols-rounded">account_circle</span>Profile</a>
                 <a href="./settings.html"><span class="material-symbols-rounded">settings</span>Settings</a>
                 <a href="../../index.html"><span class="material-symbols-rounded">logout</span>Logout</a>
@@ -90,7 +91,7 @@
                     View results
                 </a>
 
-                <div class="w-full mt-4">
+                <div class="w-full lg:w-[80%]">
                     <form action="" class="flex items-center gap-2 w-full relative md:w-[32rem]">
                         <label for="student-search" class="text-body-200 absolute top-3 left-1">
                             <span class="material-symbols-rounded">search</span>
@@ -110,27 +111,27 @@
                         </button>
                     </form>
 
-                    <form action="" class="flex items-end flex-wrap gap-1" id="result-options-form">
-                        <div class="select">
+                    <form action="" class="flex items-end flex-wrap gap-2 md:w-[32rem]" id="result-options-form">
+                        <div class="select flex-grow">
                             <label for="session">Session</label>
-                            <select name="session" id="session">
+                            <select name="session" id="session" class="w-full">
                                 <option value="" class>Select session</option>
                                 <option value="2019-2020">2019-2020</option>
                                 <option value="2018-2019">2018-2019</option>
                             </select>
                         </div>
 
-                        <div class="select">
+                        <div class="select flex-grow">
                             <label for="semester">Semester</label>
-                            <select name="semester" id="semester">
+                            <select name="semester" id="semester" class="w-full">
                                 <option value="harmattan">Harmattan</option>
                                 <option value="rain">Rain</option>
                             </select>
                         </div>
 
-                        <div class="select">
+                        <div class="select flex-grow">
                             <label for="course">Course</label>
-                            <select name="course" id="course">
+                            <select name="course" id="course" class="w-full">
                                 <option value="1">MTH 101</option>
                             </select>
                         </div>
@@ -140,7 +141,7 @@
                             View Result
                         </button>
                     </form>
-                    <div>
+                    <div class="flex justify-end">
                         <button type="button"
                             class="btn-sm text-white bg-[var(--primary)] hover:bg-[var(--primary-700)] transition rounded h-8">
                             Print
@@ -148,12 +149,12 @@
                     </div>
                 </div>
 
-                <div id="advisor-results-container-single" class="pb-4">
-                    <table class="table whitespace-nowrap">
+                <div id="advisor-results-container-single" class="pb-4 lg:w-[80%]">
+                    <table class="table whitespace-nowrap w-full">
                         <thead>
                             <th class="w-10">S/N</th>
                             <th>Name</th>
-                            <th class="w-10">Reg. No.</th>
+                            <th>Reg. No.</th>
                             <th class="w-10">Program</th>
                             <th class="w-10">Test</th>
                             <th class="w-10">Lab</th>
