--- a/pages/advisor/results.html
+++ b/pages/advisor/results.html
@@ -11,7 +11,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
-    <title>Advisor - Class</title>
+    <title>Advisor - Results</title>
 </head>
 
 <body x-data="{navIsOpen: false, open: false}">
@@ -37,6 +37,7 @@
                 <a href="./index.html"><span class="material-symbols-rounded">home</span>Home</a>
                 <a href="./class.html"><span class="material-symbols-rounded">group</span>Class</a>
                 <a href="./results.html" class="active"><span class="material-symbols-rounded">school</span>Results</a>
+                <a href="./transcript.html"><span class="material-symbols-rounded">auto_stories</span>Transcripts</a>
                 <a href="./profile.html"><span class="material-symbols-rounded">account_circle</span>Profile</a>
                 <a href="./settings.html"><span class="material-symbols-rounded">settings</span>Settings</a>
                 <a href="../../index.html"><span class="material-symbols-rounded">logout</span>Logout</a>
@@ -87,19 +88,18 @@
                 <!-- Additional styles in student.css -->
                 <div id="advisor-results" class="flex items-center text-sm font-semibold gap-4 text-body-200">
                     <a href="./results.html" class="active">View Results</a>
-                    <a href="./update-result.html">Update Results</a>
                     <a href="./upload-result.html">Upload Results</a>
                     <a href="./cgpa-summary-result.html">CGPA Summary Result</a>
                 </div>
 
                 <div class="w-full mt-4">
-                    <form action="" class="flex items-center gap-2 w-full relative md:w-[32rem]">
+                    <form action="" class="flex items-center gap-2 w-full relative md:w-[34rem]">
                         <label for="student-search" class="text-body-200 absolute top-3 left-1">
                             <span class="material-symbols-rounded">search</span>
                         </label>
-                        <input type="search" name="studentSearch" id="student-search" placeholder="Search..." class="border border-[var(--primary)] outline-none h-8  pl-8 text-body-300 w-full" >
-                        <div class="select">
-                            <select name="searchBy" id="searchBy">
+                        <input type="search" name="studentSearch" id="student-search" placeholder="Search..." class="border border-[var(--primary)] outline-none h-8  pl-8 text-body-300 flex-1">
+                        <div class="select flex-1">
+                            <select name="searchBy" id="searchBy" class="w-full">
                                 <option value="">Search by</option>
                                 <option value="name">Name</option>
                                 <option value="regNum">Reg. Number</option>
@@ -111,28 +111,28 @@
                         </button>
                     </form>
 
-                    <form action="" class="flex items-end flex-wrap gap-1" id="result-options-form">
-                        <div class="select">
+                    <form action="" class="flex items-end flex-wrap gap-2 md:w-[34rem]" id="result-options-form">
+                        <div class="select flex-1">
                             <label for="session">Session</label>
-                            <select name="session" id="session">
+                            <select name="session" id="session" class="w-full">
                                 <option value="" class>Select session</option>
                                 <option value="2019-2020">2019-2020</option>
                                 <option value="2018-2019">2018-2019</option>
                             </select>
                         </div>
 
-                        <div class="select">
+                        <div class="select flex-1">
                             <label for="semester">Semester</label>
-                            <select name="semester" id="semester" disabled>
+                            <select name="semester" id="semester" class="w-full" disabled>
                                 <option value="">Select semester</option>
                                 <option value="harmattan">Harmattan</option>
                                 <option value="rain">Rain</option>
                             </select>
                         </div>
 
-                        <div class="select">
+                        <div class="select flex-1">
                             <label for="course">Course</label>
-                            <select name="course" id="course" disabled>
+                            <select name="course" id="course" class="w-full" disabled>
                                 <option value="">Select course</option>
                                 <option value="all">All courses</option>
                                 <option value="1">MTH 101</option>
