--- a/pages/student/index.html
+++ b/pages/student/index.html
@@ -162,7 +162,7 @@
                 xl:col-span-2">
 
                     <div class="rounded border border-slate-400 flex flex-col gap-4 items-center px-4 py-16">
-                        <img src="../../assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
+                        <img src="../../assets/images/user.jpg" alt="user_img" class="w-32 h-32 object-cover rounded-full">
 
                         <div class="flex flex-col items-center gap-1 text-center">
                             <h1 class="text-body-800 text-2xl">
