--- a/pages/student/profile.html
+++ b/pages/student/profile.html
@@ -206,7 +206,7 @@
                 class="fixed top-12 right-0 bg-white flex flex-col gap-2 overflow-y-scroll w-80 p-2 shadow-lg">
 
                 <div class="rounded border border-slate-400 flex flex-col gap-4 items-center px-4 py-16">
-                    <img data-image="user" src="../../assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
+                    <img data-image="user" src="../../assets/images/user.jpg" alt="user_img" class="w-32 h-32 object-cover rounded-full">
 
                     <div class="flex flex-col items-center gap-1 text-center">
                         <h1 class="text-body-800 text-2xl">
